[package]
name = "astroids-rust"
version = "1.0.0"
authors = [
    "Benjamin <bstreb@gmail.com>"
]

[[bin]]
name = "astroids-rust"
path = "src/main.rs"

[dependencies]
piston = '0.53.1'
piston_window = '0.124.0'
piston2d-graphics = '0.42.0'
piston2d-opengl_graphics = '0.81.0'
image = '0.24.3'
rand = '0.8.5'
num = { version = '0.1.42', features = ["rational"] }
rand_distr = "0.4.3"

[dev-dependencies]
expectest = "*"
